# class-bot

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
src/: __init__.py  config.py
src/ai/: factory.py  openai_backend.py  provider.py  qwen_local.py  qwen_local_worker.py
src/bot/: commands.py  discord_bot.py  formatting.py
src/cli/: __init__.py  ask.py  stress_test.py
src/docs/: __init__.py  manifest.py  normalize_raw_docs.py  validate_docs.py
src/rag/: __init__.py  answerer.py  prompt_safety.py  prompts.py  retrieval.py  schemas.py
src/storage/: __init__.py  db.py  logging.py
tests/: test_answerer_mock.py  test_formatting.py  test_manifest.py  test_prompt_safety.py  test_provider_factory.py  test_qwen_local.py  test_safety_enforcement.py
