[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "class-bot"
version = "0.1.0"
description = "Discord bot for course-administrative questions grounded in local course materials."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
